padthv1 - An old-school additive polyphonic synthesizer
-------------------------------------------------------

ChangeLog


GIT HEAD

- Fixed unitialized number of voices variable; early-bird
  adaptations to Qt6 (PREVIEW).


0.9.16  2020-08-06  A Summer'20 Release.

- Fixed deprecated stuff on an early preparation for Qt6.


0.9.15  2020-06-22  An Early-Summer'20 Release.

- A long awaited expedite "Panic" button is now featured.
- Note velocity doesn't affect DCF envelope anymore.
- Avoid glib event-loop upon LV2 plug-in instantiation.


0.9.14  2020-05-05  A Mid-Spring'20 Release.

- Fixed initial DCF1, LFO1 group enablement (GUI).
- Fixed initial window title for the LV2 External UI.
- LV2 Atom/Port-event host notification support has been
  implemented (unofficial).
- Prevent execution of duplicate or redundant MIDI bank-
  select/program-change commands.
- Early fixing to build for Qt >= 5.15.0.


0.9.13  2020-03-26  A Spring'20 Release.

- Maximum pitch-bend range has been expanded to 0..400%,
  allegedly to support some PME driven instruments (as
  proposed by sacarlson, to synthv1).
- Make man page compression reproducible (after request
  by Jelle van der Waa, thanks).
- Fixed crash when showing the tooltip of a negative note
  number that results from dragging over and beyond the
  left edge of the virtual piano keyboard.
- Remove -v (verbose) flag from 'strip' post-link command.
- Fixed CMake build by adding missing Custom Color Theme
  (palette) form file (.ui).
- Bumped copyright headers into the New Year (2020).


0.9.12  2019-12-26  The Winter'19 Release.

- Custom color (palette) theme editor introduced; color
  (palette) theme changes are now effective immediately,
  except on default.
- Second attempt to fix the yet non-official though
  CMake build configuration.
- Move QApplication construction/destruction from LV2 UI
  to plug-in instantiation and cleanup.


0.9.11  2019-10-31  A Halloween'19 Release.
