@@ -1,4 +1,4 @@
-.TH PADTHV1 "1" "July 20, 2017"
+.TH PADTHV1 "1" "August 31, 2020"
 .SH NAME
 padthv1 \- an old-school polyphonic additive synthesizer
 .SH SYNOPSIS
@@ -23,6 +23,10 @@ URI: http://padthv1.sourceforge.net/lv2
 \fB\-g\fR, \fB\-\-no\-gui\fR
 .IP
 Disable the graphical user interface (GUI)
+.HP
+\fB\-n\fR, \fB\-\-client\-name\fR=[\fIlabel\fR]
+.IP
+Set the JACK client name (default: padthv1)
 .HP
 \fB\-h\fR, \fB\-\-help\fR
 .IP
